rust/adl-lsp/src/parser/snapshots/adl_lsp__parser__diagnostics__test__collect_import_error.snap
---
source: src/parser/diagnostics.rs
expression: parsed.unwrap().collect_diagnostics()
---
- range:
    start:
      line: 6
      character: 4
    end:
      line: 6
      character: 27
  severity: 1
  source: adl-lsp
  message: Imports must be at the top of a module
