rust/adl-lsp/src/parser/snapshots/adl_lsp__parser__diagnostics__test__collect_missing_semicolon_error.snap
---
source: src/parser/diagnostics.rs
expression: parsed.unwrap().collect_diagnostics(contents)
---
- range:
    start:
      line: 18
      character: 42
    end:
      line: 18
      character: 43
  severity: 1
  message: syntax error in annotation_declaration
- range:
    start:
      line: 0
      character: 0
    end:
      line: 19
      character: 1
  severity: 1
  message: missing semicolon
- range:
    start:
      line: 1
      character: 4
    end:
      line: 1
      character: 22
  severity: 1
  message: missing semicolon
- range:
    start:
      line: 2
      character: 4
    end:
      line: 2
      character: 21
  severity: 1
  message: missing semicolon
- range:
    start:
      line: 4
      character: 4
    end:
      line: 4
      character: 24
  severity: 1
  message: missing semicolon
- range:
    start:
      line: 6
      character: 4
    end:
      line: 6
      character: 42
  severity: 1
  message: missing semicolon
- range:
    start:
      line: 8
      character: 4
    end:
      line: 11
      character: 5
  severity: 1
  message: missing semicolon
- range:
    start:
      line: 13
      character: 4
    end:
      line: 16
      character: 5
  severity: 1
  message: missing semicolon
- range:
    start:
      line: 9
      character: 8
    end:
      line: 9
      character: 19
  severity: 1
  message: missing semicolon
- range:
    start:
      line: 10
      character: 8
    end:
      line: 10
      character: 17
  severity: 1
  message: missing semicolon
- range:
    start:
      line: 14
      character: 8
    end:
      line: 14
      character: 19
  severity: 1
  message: missing semicolon
- range:
    start:
      line: 15
      character: 8
    end:
      line: 15
      character: 17
  severity: 1
  message: missing semicolon
- range:
    start:
      line: 18
      character: 4
    end:
      line: 18
      character: 51
  severity: 1
  message: missing semicolon
