rust/adl-lsp/src/parser/snapshots/adl_lsp__parser__diagnostics__test__collect_parse_error.snap
---
source: src/parser/diagnostics.rs
expression: parsed.unwrap().collect_diagnostics(contents)
---
- range:
    start:
      line: 3
      character: 4
    end:
      line: 3
      character: 22
  severity: 1
  message: missing semicolon
